# Portfolio-Analytics

./: .gitignore  README.md  auth.py  config.py  pyproject.toml
backend/: test.db
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: AuthRoutes.py  PortfolioRoutes.py  TransactionRoutes.py  UserRoutes.py
frontend/: app.py
frontend/pages/: 1_login.py  2_signup.py  3_main_dashboard.py
